--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -24,10 +24,15 @@ jobs:
           pip install pyinstaller
 
       - name: Build executable
-        run: pyinstaller --onefile log_parser.py  # Replace 'your_script.py' with your actual script name
+        run: pyinstaller --onefile log_parser.py  # Replace 'log_parser.py' with your actual script name
 
-      - name: Archive executable
-        run: zip -j build_executable.zip /home/runner/work/koolo_item_logger/koolo_item_logger/dist/log_parser.exe  # Replace 'your_script' with the name of the built executable
+      - name: Verify built files
+        run: |
+          ls dist/
+          ls README.md
+
+      - name: Archive executable and README.md
+        run: zip -j build_executable.zip dist/log_parser README.md  # Replace 'log_parser' with the name of the built executable
 
   release:
     needs: build
