--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -1,4 +1,4 @@
-name: Build and Release
+name: Build and Release Windows Executable
 
 on:
   push:
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest  # Use a Windows runner
 
     steps:
       - name: Checkout code
@@ -16,37 +16,47 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: '3.x'  # Specify your Python version
+          python-version: '3.9'  # Specify your Python version
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install pyinstaller
 
-      - name: Build executable
+      - name: Build Windows executable
         run: pyinstaller --onefile log_parser.py  # Replace 'log_parser.py' with your actual script name
 
       - name: Verify built files
         run: |
-          ls dist/
-          ls README.md
+          dir dist\
+          dir README.md
 
       - name: Archive executable and README.md
-        run: zip -j build_executable.zip dist/log_parser README.md  # Replace 'log_parser.exe' with the name of the built executable
+        run: |
+          Compress-Archive -Path dist\log_parser.exe, README.md -DestinationPath build_executable.zip  # Zip the .exe and README.md
+
+      - name: Upload artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: build_executable.zip
+          path: build_executable.zip
 
   release:
     needs: build
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+      - name: Download artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: build_executable.zip
+          path: .
 
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.PUSH_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: ${{ github.ref }}
           release_name: Release ${{ github.ref }}
